# stacktrace

./: COPYING  Makefile.am  Makefile.in  README  README.md  README.rst  configure  configure.ac
src/: Makefile.am  Makefile.in  stacktrace++.cpp  stacktrace.c  stacktrace.h
tests/: Makefile.am  Makefile.in  test_external_exc.cpp  test_simple.c  test_simple_exc.cpp
